syntax = "proto3";

package inventory;

// Der Service "InventoryService"
service InventoryService {
  // Die Funktion "CheckAvailability", die aufgerufen werden kann
  rpc CheckAvailability(CheckRequest) returns (CheckResponse);
}

// Die Daten, die der Aufrufer schicken muss
message CheckRequest {
  string productId = 1;
  int32 quantity = 2;
}

// Die Daten, die der Service als Antwort zur√ºckgibt
message CheckResponse {
  bool isAvailable = 1;
  string statusMessage = 2;
}